[project]
name = "bblm26-recgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyarrow>=24.0.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "wandb>=0.27.2",
]

[dependency-groups]
gpu = [
    "flash-attn-4==4.0.0b16; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
